--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			<br><br>
 			Age:<input type="text" placeholder="Enter Name" required>
 			<br><br>
+			Phone:<input type="text" placeholder="Enter phone" required>
+			<br><br>
 			<button type="submit">Submit</button>
 		</form>
 	</body>
